// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser function expressions parses colon-separated function declarations 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "value": Function {
      "body": Block {
        "statements": Array [
          Print {
            "expressions": Array [
              Literal {
                "value": BrsString {
                  "kind": 2,
                  "value": "Lorem ipsum",
                },
              },
            ],
          },
        ],
      },
      "end": Object {
        "isReserved": false,
        "kind": 45,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 9,
    },
  },
]
`;

exports[`parser function expressions parses functions with default argument expressions 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "value": Function {
      "body": Block {
        "statements": Array [],
      },
      "end": Object {
        "isReserved": false,
        "kind": 45,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [
        Object {
          "defaultValue": Literal {
            "value": Int32 {
              "kind": 3,
              "value": 3,
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": "a",
          "type": 9,
        },
        Object {
          "defaultValue": Literal {
            "value": Int32 {
              "kind": 3,
              "value": 4,
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": "b",
          "type": 9,
        },
        Object {
          "defaultValue": Binary {
            "left": Variable {
              "name": Object {
                "isReserved": false,
                "kind": 21,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
            },
            "right": Literal {
              "value": Int32 {
                "kind": 3,
                "value": 5,
              },
            },
            "token": Object {
              "isReserved": false,
              "kind": 8,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": "c",
          "type": 9,
        },
      ],
      "returns": 9,
    },
  },
]
`;

exports[`parser function expressions parses functions with implicit-dynamic arguments 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "value": Function {
      "body": Block {
        "statements": Array [],
      },
      "end": Object {
        "isReserved": false,
        "kind": 45,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": "a",
          "type": 9,
        },
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": "b",
          "type": 9,
        },
      ],
      "returns": 9,
    },
  },
]
`;

exports[`parser function expressions parses functions with typed arguments 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "value": Function {
      "body": Block {
        "statements": Array [],
      },
      "end": Object {
        "isReserved": false,
        "kind": 45,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": "str",
          "type": 2,
        },
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": "count",
          "type": 3,
        },
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": "separator",
          "type": 11,
        },
      ],
      "returns": 9,
    },
  },
]
`;

exports[`parser function expressions parses functions with typed arguments and default expressions 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "value": Function {
      "body": Block {
        "statements": Array [],
      },
      "end": Object {
        "isReserved": false,
        "kind": 45,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [
        Object {
          "defaultValue": Literal {
            "value": Int32 {
              "kind": 3,
              "value": 3,
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": "a",
          "type": 3,
        },
        Object {
          "defaultValue": Binary {
            "left": Variable {
              "name": Object {
                "isReserved": false,
                "kind": 21,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
            },
            "right": Literal {
              "value": Int32 {
                "kind": 3,
                "value": 5,
              },
            },
            "token": Object {
              "isReserved": false,
              "kind": 8,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": "b",
          "type": 3,
        },
      ],
      "returns": 9,
    },
  },
]
`;

exports[`parser function expressions parses minimal empty function expressions 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "value": Function {
      "body": Block {
        "statements": Array [],
      },
      "end": Object {
        "isReserved": false,
        "kind": 45,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 9,
    },
  },
]
`;

exports[`parser function expressions parses non-empty function expressions 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "value": Function {
      "body": Block {
        "statements": Array [
          Print {
            "expressions": Array [
              Literal {
                "value": BrsString {
                  "kind": 2,
                  "value": "Lorem ipsum",
                },
              },
            ],
          },
        ],
      },
      "end": Object {
        "isReserved": false,
        "kind": 45,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 9,
    },
  },
]
`;

exports[`parser function expressions parses return types 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "value": Function {
      "body": Block {
        "statements": Array [],
      },
      "end": Object {
        "isReserved": false,
        "kind": 45,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 10,
    },
  },
]
`;

exports[`parser sub expressions parses minimal sub expressions 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "value": Function {
      "body": Block {
        "statements": Array [],
      },
      "end": Object {
        "isReserved": false,
        "kind": 48,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 77,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": Array [],
      "returns": 10,
    },
  },
]
`;

exports[`parser sub expressions parses non-empty sub expressions 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "value": Function {
      "body": Block {
        "statements": Array [
          Print {
            "expressions": Array [
              Literal {
                "value": BrsString {
                  "kind": 2,
                  "value": "Lorem ipsum",
                },
              },
            ],
          },
        ],
      },
      "end": Object {
        "isReserved": false,
        "kind": 48,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 77,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": Array [],
      "returns": 10,
    },
  },
]
`;

exports[`parser sub expressions parses subs with default argument expressions 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "value": Function {
      "body": Block {
        "statements": Array [],
      },
      "end": Object {
        "isReserved": false,
        "kind": 48,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 77,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": Array [
        Object {
          "defaultValue": Literal {
            "value": Int32 {
              "kind": 3,
              "value": 3,
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": "a",
          "type": 9,
        },
        Object {
          "defaultValue": Literal {
            "value": Int32 {
              "kind": 3,
              "value": 4,
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": "b",
          "type": 9,
        },
        Object {
          "defaultValue": Binary {
            "left": Variable {
              "name": Object {
                "isReserved": false,
                "kind": 21,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
            },
            "right": Literal {
              "value": Int32 {
                "kind": 3,
                "value": 5,
              },
            },
            "token": Object {
              "isReserved": false,
              "kind": 8,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": "c",
          "type": 9,
        },
      ],
      "returns": 10,
    },
  },
]
`;

exports[`parser sub expressions parses subs with implicit-dynamic arguments 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "value": Function {
      "body": Block {
        "statements": Array [],
      },
      "end": Object {
        "isReserved": false,
        "kind": 45,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": Array [
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": "a",
          "type": 9,
        },
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": "b",
          "type": 9,
        },
      ],
      "returns": 9,
    },
  },
]
`;

exports[`parser sub expressions parses subs with typed arguments 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "value": Function {
      "body": Block {
        "statements": Array [],
      },
      "end": Object {
        "isReserved": false,
        "kind": 45,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": Array [
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": "str",
          "type": 2,
        },
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": "count",
          "type": 3,
        },
      ],
      "returns": 9,
    },
  },
]
`;

exports[`parser sub expressions parses subs with typed arguments and default expressions 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "value": Function {
      "body": Block {
        "statements": Array [],
      },
      "end": Object {
        "isReserved": false,
        "kind": 48,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 77,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": Array [
        Object {
          "defaultValue": Literal {
            "value": Int32 {
              "kind": 3,
              "value": 3,
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": "a",
          "type": 3,
        },
        Object {
          "defaultValue": Binary {
            "left": Variable {
              "name": Object {
                "isReserved": false,
                "kind": 21,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
            },
            "right": Literal {
              "value": Int32 {
                "kind": 3,
                "value": 5,
              },
            },
            "token": Object {
              "isReserved": false,
              "kind": 8,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": "b",
          "type": 3,
        },
      ],
      "returns": 10,
    },
  },
]
`;

exports[`parser usage allows function expressions in assignment RHS 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "anonymousFunction",
    },
    "value": Function {
      "body": Block {
        "statements": Array [
          Print {
            "expressions": Array [
              Literal {
                "value": BrsString {
                  "kind": 2,
                  "value": "I'm anonymous",
                },
              },
            ],
          },
        ],
      },
      "end": Object {
        "isReserved": false,
        "kind": 45,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 9,
    },
  },
]
`;

exports[`parser usage allows sub expressions in call arguments 1`] = `
Array [
  Expression {
    "expression": Call {
      "args": Array [
        Function {
          "body": Block {
            "statements": Array [
              Print {
                "expressions": Array [
                  Literal {
                    "value": BrsString {
                      "kind": 2,
                      "value": "I'm a callback",
                    },
                  },
                ],
              },
            ],
          },
          "end": Object {
            "isReserved": false,
            "kind": 45,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "end function",
          },
          "keyword": Object {
            "isReserved": true,
            "kind": 57,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "function",
          },
          "parameters": Array [],
          "returns": 9,
        },
      ],
      "callee": Variable {
        "name": Object {
          "isReserved": false,
          "kind": 21,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "acceptsCallback",
        },
      },
      "closingParen": Object {
        "isReserved": false,
        "kind": 1,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": ")",
      },
    },
  },
]
`;
